--- a/assets/styles/index.css
+++ b/assets/styles/index.css
@@ -1,3 +1,11 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+/* all button  */
+.activefilter{
+    background-color: black;
+}
+.inactivefilter{
+    background-color: white;
+}
